fixed some spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,10 +17,14 @@ section{
 	height: 70px;
 	margin: 10px;
 }
-/* .push-footer {
-	margin: 10%;
-} */
-
+.social-panel{
+	margin: auto;
+	text-align: center;
+}
+.main-panel {
+	margin-right:2%;
+	padding: 0% 2% 2% 2%;
+}
 .clearfix::after {
 	content: "";
 	clear: both;
